<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">email</string>
    <string name="sign_up_button_label">SIGN UP</string>

    <string name="signup_error_message">Please make sure you enter a username, password and email address</string>
    <string name="signup_error_title">Oops!</string>

    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages.</string>
    <string name="empty_friends_label">Add friends to begin.</string>
    <string name="edit_friends_menu_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="file_size_too_large">The selected file is too large. Select a new file</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="title_activity_recipients_acvity2">Choose Recipients</string>
    <string name="menu_send_action_title">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="message_icon_content_description">message icon</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="image">image</string>
    <string name="ribbit_background_login_image">background image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="button_divider_content_description">Button divider</string>
    <string name="avatar_content_description">default avatar image</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="push_message">You have a new message from %s!</string>
</resources>
