<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.fisheradelakin.ribbit.SignUpActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/ribbit_background_login_image" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/fieldsContainer"
        style="@style/AuthFieldContainer">


        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText">

            <requestFocus/>

            </EditText>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            style="@style/AuthEditText"/>

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_hint"
            style="@style/AuthEditText"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fieldsContainer"
        android:src="@drawable/button_divider"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/button_divider_content_description"/>

    <Button
        android:id="@+id/signUpButton"
        android:text="@string/sign_up_button_label"
        style="@style/AuthButton"
        android:layout_below="@id/fieldsContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_toStartOf="@id/buttonDivider"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/AuthButton"
        android:layout_below="@id/fieldsContainer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_toEndOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"/>
</RelativeLayout>
